Add hub insert.

--- a/Airport.Api/.editorconfig
+++ b/Airport.Api/.editorconfig
@@ -46,5 +46,6 @@ dotnet_diagnostic.IDE0290.severity = none
 dotnet_diagnostic.IDE0305.severity = none
 dotnet_diagnostic.IDE0003.severity = none
 dotnet_diagnostic.IDE0028.severity = none
+dotnet_diagnostic.IDE0090.severity = none
 
 
